# cas-dl-genai-exercises-fs2025

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/01_basic_image_generation/: basic_image_generation.ipynb
notebooks/02_pre_trained_models/: pre_trained_models.ipynb
src/dl_genai_lectures/: utils.py  visualize.py
